--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
-  color:white
+  color:white;
+  background-color: black;
 }
 
 .App-logo {
@@ -15,7 +16,6 @@
 }
 
 .App-header {
-  filter: blur(8px);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -38,46 +38,6 @@
   }
 }
 
-/* Css agujer negro (esto se pasaria a componente en un futuro)*/
-body {
-  background: #000;
-  display: grid;
-  place-content: center;
-  height: 100vh;
-  /* filter: blur(8px); */
-}
-b, b:before, b:after {
-  display: block;
-  border-radius: 50%;
-}
-b {
-  width: 30vmin;
-  height: 30vmin;
-  box-shadow: 1vmin 0 3vmin 2vmin #f50,
-       inset -1vmin 0 3vmin 4vmin #f80,
-             -4vmin 0 35vmin 0 #f60;
-  animation: bh 5s linear infinite;
-}
-@keyframes bh {
-  0% {transform: rotate(0deg)}
-  100% {transform: rotate(-360deg)}
-}
-b:before, b:after {
-  content: "";
-  background: white;
-  position: relative;
-  top: 6vmin;
-}
-b:before {
-  width: 1vmin;
-  height: 1vmin;
-  left: 26vmin;
-  box-shadow: yellow 0 0 2vmin 2vmin,
-              yellow 2vmin 4vmin 2vmin 0.5vmin;
-}
-b:after {
-  width: 38vmin;
-  height: 38vmin;
-  opacity: 0.03;
-  left: -14vmin;
+:root{
+  background-color: black;
 }
