--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   text-align: center;
   color:white;
   background-color: black;
+  font-family: 'Odibee Sans', cursive;
+  font-size: x-large;
 }
 
 .App-logo {
