--- a/src/components/NavBar/navBar.css
+++ b/src/components/NavBar/navBar.css
@@ -8,8 +8,11 @@
     margin-left: 20px;
     border-radius: 10%;
     margin-top: 15px;
+    margin-bottom: 10px;
 }
-
+.navbar {
+    margin-bottom: 15px;
+}
 
 .navbar-brand{
     font-size: 2rem;
