--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -5,7 +5,7 @@
 .toast-header{
     font-size: x-large;
     color: black;
-    background-color: red;
+    background-color: #f80;
 }
 
 .toast-body{
